--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "e2e": "npx cypress open"
+    "e2e": "npx cypress open",
+    "e2eh": "npx cypress run"
   },
   "eslintConfig": {
     "extends": [
