--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"npm run web\" \"npm run server\"",
+    "web": "react-scripts start",
+    "server": "node ./server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -48,6 +50,8 @@
   "devDependencies": {
     "@cypress/react": "^6.0.0",
     "@cypress/webpack-dev-server": "^2.0.0",
-    "cypress": "^10.2.0"
+    "concurrently": "^7.2.2",
+    "cypress": "^10.2.0",
+    "json-server": "^0.17.0"
   }
 }
